--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,13 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+      <a href="/"> Home </a>
+      <a href="/about"> About  </a>
+      <a href="/coffee"> Coffee </a>
+      <a href="/food"> Food </a>
+      <a href="/entertaiment"> Entertaiment </a>
+      <a href="/contact"> Contact </a>
+      
     {{{body}}}
   </body>
 </html>
