--- a/views/coffee.hbs
+++ b/views/coffee.hbs
@@ -4,7 +4,13 @@
 
     <h3>{{this.coffee}}</h3>
     <p> </p>
+    <img src="{{this.image_url}}" alt="imagesb">
+
+   <p> {{this.description}} </p>
+   <p> {{this.tagline}} </p>
+   <hr>
     
     <a href="/coffee/{{this._id}}">All our different types of coffee </a>
     {{/each}}
 </ul>
+
