added copy to home, about, entertainment, and contact

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,7 @@
       <a href="/about"> About  </a>
       <a href="/coffee"> Coffee </a>
       <a href="/food"> Food </a>
-      <a href="/entertaiment"> Entertaiment </a>
+      <a href="/entertainment"> Entertaiment </a>
       <a href="/contact"> Contact </a>
       
     {{{body}}}
