put nav in header tag

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,12 +5,17 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <header>
+
       <a href="/"> Home </a>
       <a href="/about"> About  </a>
       <a href="/coffee"> Coffee </a>
       <a href="/food"> Food </a>
       <a href="/entertainment"> Entertaiment </a>
       <a href="/contact"> Contact </a>
+
+    </header>
+
       
     {{{body}}}
   </body>
