--- a/views/entertainment.hbs
+++ b/views/entertainment.hbs
@@ -2,10 +2,9 @@
 <h5>Tuesday</h5>
 <p>Poetry Night</p>
 <h5>Wednesday</h5>
-<p>Open Mic</p>
+<p>Book club</p>
 <h5>Thursday</h5>
 <p>Visiting Author Series</p>
-<h5>Friday</h5>
-<p>Live DJ</p>
-<h5>Saturday</h5>
-<p>Salsa  Night</p>
+<h5> Weekends </h5>
+<p> Jazz Music </p>
+
