--- a/views/coffee-details.hbs
+++ b/views/coffee-details.hbs
@@ -4,6 +4,6 @@
 <p>Country: {{foundCoffee.country}}</p>
 <p> Roast: {{foundcoffee.roast}}  </p>
 <p> Description: {{foundcoffee.description}} </p>
-<p> price: {{ foundcoffee.pricen}}</p>
+<p> price: {{ foundcoffee.price}}</p>
 
  <a href="/coffee"> Coffee </a>
