--- a/views/coffee-create.hbs
+++ b/views/coffee-create.hbs
@@ -1,6 +1,6 @@
 <h2>Create a new coffee</h2>
 
-<form method="post" action="/create">
+<form method="post" action="/coffee-create">
   <label> Country </label>
   <input name="country" />
   <label>Roast</label>
