--- a/views/drinks-create.hbs
+++ b/views/drinks-create.hbs
@@ -1,6 +1,6 @@
 <h2>Create a new drink </h2>
 
-<form method="post" action="/create">
+<form method="post" action="/drinks-create">
   <label> Name </label>
   <input name="name" />
   <label>Tempeture</label>
