--- a/views/food-create.hbs
+++ b/views/food-create.hbs
@@ -1,6 +1,6 @@
-<h2>Create a new drink </h2>
+<h2>Create a new food item</h2>
 
-<form method="post" action="/create">
+<form method="post" action="/food-create">
   <label> Name  </label>
   <input name="name" />
   <label>Category</label>
