--- a/views/entertainment.hbs
+++ b/views/entertainment.hbs
@@ -1,10 +1,10 @@
-<h3>Check out our schedule of upcoming events!</h3>
-<h5>Tuesday</h5>
+<h3>Upcoming Events!</h3>
+<h2>Tuesday</h2>
 <p>Poetry Night</p>
-<h5>Wednesday</h5>
+<h2>Wednesday</h2>
 <p>Book club</p>
-<h5>Thursday</h5>
+<h2>Thursday</h2>
 <p>Visiting Author Series</p>
-<h5> Weekends </h5>
+<h2> Weekends </h2>
 <p> Jazz Music </p>
 
