--- a/views/about.hbs
+++ b/views/about.hbs
@@ -3,3 +3,5 @@
 <p>Casa del Cafe was opened in spring of 2022 to bring the best international roasts to downtown Miami.</p>
 <p>We feature a diverse selection of coffees, a menu of freshly made local cuisine, and a schedule of entertainment events.</p>
 <h4>Come to Casa del Cafe for the best coffee in Miami!</h4>
+
+<img src="/images/coffee2.jpg"/>
