--- a/views/coffee.hbs
+++ b/views/coffee.hbs
@@ -1,6 +1,6 @@
 <h2>This is the coffee page</h2>
 <ul>
-    {{#each coffee}}
+    {{#each newCoffees}}
 
     <h3>{{this.coffee}}</h3>
     <p> </p>
