--- a/views/coffee.hbs
+++ b/views/coffee.hbs
@@ -1,4 +1,4 @@
-<h2>This is the coffee page</h2>
+
 <ul>
     {{#each newCoffees}}
 
@@ -14,5 +14,5 @@
     {{/each}}
 </ul>
 
-<img src="/images/coffee.jpeg" />
+<img src="/images/coffee2.jpg/>
 
