--- a/views/entertainment.hbs
+++ b/views/entertainment.hbs
@@ -1,3 +1,6 @@
+
+<div class="entertaiment">
+
 <h3>Upcoming Events!</h3>
 <h2>Tuesday</h2>
 <p>Poetry Night</p>
@@ -7,4 +10,10 @@
 <p>Visiting Author Series</p>
 <h2> Weekends </h2>
 <p> Jazz Music </p>
+
+ {{!-- <img src="/images/entertaiment.jpg" alt="" class="entertaiment" /> --}}
+  
+</div> 
+     
+
 
