--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,14 +6,14 @@
   </head>
   <body>
     <header>
-
+      <div class="nav"> 
       <a href="/"> Home </a>
       <a href="/about"> About  </a>
       <a href="/coffee"> Coffee </a>
       <a href="/food"> Food </a>
       <a href="/entertainment"> Entertaiment </a>
       <a href="/contact"> Contact </a>
-
+  </div>
     </header>
 
       
