--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,3 +1,5 @@
+<div class="about"> 
+
 <h2>Welcome to Casa del Cafe</h2>
 <h3>Brickell's newest coffee shop!</h3>
 <p>Casa del Cafe was opened in spring of 2022 to bring the best international roasts to downtown Miami.</p>
@@ -5,3 +7,4 @@
 <h4>Come to Casa del Cafe for the best coffee in Miami!</h4>
 
 <img src="/images/coffee2.jpg"/>
+</div>
