coffee details page

--- a/views/coffee-details.hbs
+++ b/views/coffee-details.hbs
@@ -1,9 +1,9 @@
-<h1>{{title}}</h1>
-<h3> This is coffee details </h3>
+
+<h3> These are the details for our {{foundCoffee.country}} coffee. </h3>
 
 <p>Country: {{foundCoffee.country}}</p>
-<p> Roast: {{foundcoffee.roast}}  </p>
-<p> Description: {{foundcoffee.description}} </p>
-<p> price: {{ foundcoffee.price}}</p>
+<p> Roast: {{foundCoffee.roast}}  </p>
+<p> Description: {{foundCoffee.description}} </p>
+<p> Price: {{ foundCoffee.price}}</p>
 
- <a href="/coffee"> Coffee </a>
+ <a href="/coffee">All Coffees </a>
