--- a/views/coffee.hbs
+++ b/views/coffee.hbs
@@ -14,7 +14,7 @@
     {{#each newDrinks}}
 
     <p> {{this.name}} </p>
-    <p> {{this.tempeture}} </p>
+    <p> {{this.temperature}} </p>
     <p> {{this.description}} </p>
    <p> {{this.price}} </p>
 
